Solve some lint issue